--- a/Html/index.html
+++ b/Html/index.html
@@ -29,7 +29,7 @@
         <ul class="navbar-list">
             <li class="navbar-list-item">
                 <a href="login.html" class="navbar-link unselectable">
-                    <span class="material-symbols-outlined infoIcon hidden authIcon">
+                    <span class="material-symbols-outlined hidden hideUnder768">
                         login
                     </span>
                     <p class="label">Login</p>
@@ -38,7 +38,7 @@
 
             <li class="navbar-list-item">
                 <a href="signup.html" class="navbar-link unselectable">
-                    <span class="material-symbols-outlined infoIcon hidden authIcon">
+                    <span class="material-symbols-outlined hidden hideUnder768">
                         how_to_reg
                     </span>
                     <p class="label">Sign Up</p>
