Added: Achievement page with basic filtering logic Fixed: Navbar responsivity not working

--- a/Html/dashboard.html
+++ b/Html/dashboard.html
@@ -34,7 +34,7 @@
                     <span class="material-symbols-outlined">
                         group
                     </span>
-                    <p class="label">Community</p>
+                    <p class="label hideUnder768">Community</p>
                 </a>
             </li>
             <li class="navbar-list-item">
@@ -42,7 +42,7 @@
                     <span class="material-symbols-outlined">
                         trophy
                     </span>
-                    <p class="label">Achievments</p>
+                    <p class="label hideUnder768">Achievments</p>
                 </a>
             </li>
             <li class="navbar-list-item">
@@ -50,15 +50,15 @@
                     <span class="material-symbols-outlined">
                         person
                     </span>
-                    <p class="label">Profile</p>
+                    <p class="label hideUnder768">Profile</p>
                 </a>
             </li>
             <li class="navbar-list-item">
                 <a href="index.html" class="navbar-link unselectable">
-                <span class="material-symbols-outlined">
-                    logout
-                </span>
-                <p class="label">Logout</p>
+                    <span class="material-symbols-outlined">
+                        logout
+                    </span>
+                    <p class="label hideUnder768">Logout</p>
                 </a>
             </li>
         </ul>
@@ -91,22 +91,22 @@
                 </a>
             </div>
             <div class="dashboardCard">
-                <a href="" class="dashboardCardLink">
-                                    <span class="dashboardCardInfo">
-                    <h2>Study Streak</h2>
-                    <span class="material-symbols-outlined">
-                        trophy
+                <a href="achievments.html" class="dashboardCardLink">
+                    <span class="dashboardCardInfo">
+                        <h2>Study Streak</h2>
+                        <span class="material-symbols-outlined">
+                            trophy
+                        </span>
                     </span>
-                </span>
-                <span class="dashboardCardValue">0 Days</span>
-                <span class="additionalText">🔥 Keep it going!</span>
+                    <span class="dashboardCardValue">0 Days</span>
+                    <span class="additionalText">🔥 Keep it going!</span>
                 </a>
             </div>
             <div class="dashboardCard">
-                <a href="" class="dashboardCardLink">
-                        <span class="dashboardCardInfo">
-                            <h2>Achiements</h2>
-                            <span class="material-symbols-outlined">
+                <a href="achievments.html" class="dashboardCardLink">
+                    <span class="dashboardCardInfo">
+                        <h2>Achiements</h2>
+                        <span class="material-symbols-outlined">
                             trophy
                         </span>
                     </span>
@@ -127,16 +127,16 @@
             </span>
             <div class="deckList">
                 <!-- Deck items will be dynamically added here -->
-                 <div class="noDecksPlaceholder">
+                <div class="noDecksPlaceholder">
                     <span class="material-symbols-outlined">
                         import_contacts
                     </span>
                     <p>No decks yet. Create your first one!</p>
-                 </div>
+                </div>
             </div>
         </section>
     </main>
-        <script src="../Scripts/index.js"></script>
+    <script src="../Scripts/index.js"></script>
 </body>
 
 </html>
