--- a/Html/profile.html
+++ b/Html/profile.html
@@ -32,7 +32,7 @@
                 <h2>Account Information</h2>
                 <span class="profileInfo">
                     <p class="profileInfoCaregory">Name</p>
-                    <p class="profileInfoValue">John David Olejár Pork</p>
+                    <p class="profileInfoValue">Pepa z depa</p>
                 </span>
                 <span class="profileInfo">
                     <p class="profileInfoCaregory">Email</p>
