--- a/public/Html/signup.html
+++ b/public/Html/signup.html
@@ -25,5 +25,34 @@
             <a href="login.html" class="switchAuth">Already have an account? Login</a>
         </form>
     </main>
+    <script>
+  const registerForm = document.querySelector('.authForm');
+  registerForm.addEventListener('submit', async (e) => {
+    e.preventDefault(); // prevent page reload
+
+    const username = document.getElementById('username').value;
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
+
+    try {
+      const res = await fetch('/auth/register', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ email, password, username })
+      });
+
+      const data = await res.json();
+      if (res.ok) {
+        alert(data.message); // "User registered"
+      } else {
+        alert(data.error); // e.g. "Email exists"
+      }
+    } catch (err) {
+      console.error(err);
+      alert("Something went wrong");
+    }
+  });
+</script>
+
 </body>
 </html>
