Added: CSS reset to all pages, scss maps to all scss files Fixed:  routing and session logic

--- a/public/Html/achievments.html
+++ b/public/Html/achievments.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="../Styles/css/reset.css">
     <link rel="stylesheet" href="../Styles/css/styles.css">
     <link rel="stylesheet" href="../Styles/css/achievements.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -12,7 +13,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="mainNav">
         <!-- Navigation content -->
         <ul class="navbar-list">
             <li class="navbar-list-item">
@@ -81,7 +82,7 @@
                 <span class="material-symbols-outlined achievementIcon">
                     import_contacts
                 </span>
-                <span class="summaryCardInfo">
+                <span class="achievementCardInfo">
                     <h2>First Steps</h2>
                     <p>Study your first flashcard</p>
                 </span>
@@ -93,7 +94,7 @@
                 <span class="material-symbols-outlined achievementIcon">
                     neurology
                 </span>
-                <span class="summaryCardInfo">
+                <span class="achievementCardInfo">
                     <h2>Dedicated Learner</h2>
                     <p>Study 50 flashcards</p>
                 </span>
@@ -105,7 +106,7 @@
                 <span class="material-symbols-outlined achievementIcon">
                     school
                 </span>
-                <span class="summaryCardInfo">
+                <span class="achievementCardInfo">
                     <h2>Knowledge Seeker</h2>
                     <p>Study 200 flashcards</p>
                 </span>
@@ -117,9 +118,9 @@
                 <span class="material-symbols-outlined achievementIcon">
                     local_fire_department
                 </span>
-                <span class="summaryCardInfo">
+                <span class="achievementCardInfo">
                     <h2>Streak Starter</h2>
-                    <p>Maintain a 3-day study streak</p>
+                    <p>Keep a 3-day study streak</p>
                 </span>
                 <span class="progressBar"></span>
                 <span class="percentageProgress">0% complete</span>
@@ -129,9 +130,9 @@
                 <span class="material-symbols-outlined achievementIcon">
                     workspace_premium
                 </span>
-                <span class="summaryCardInfo">
+                <span class="achievementCardInfo">
                     <h2>Week Warrior</h2>
-                    <p>Maintain a 7-day study streak</p>
+                    <p>Keep a 7-day study streak</p>
                 </span>
                 <span class="progressBar"></span>
                 <span class="percentageProgress">0% complete</span>
@@ -141,9 +142,9 @@
                 <span class="material-symbols-outlined achievementIcon">
                     trophy
                 </span>
-                <span class="summaryCardInfo">
+                <span class="achievementCardInfo">
                     <h2>Unstoppable</h2>
-                    <p>Maintain a 30-day study streak</p>
+                    <p>Keep a 30-day study streak</p>
                 </span>
                 <span class="progressBar"></span>
                 <span class="percentageProgress">0% complete</span>
@@ -153,7 +154,7 @@
                 <span class="material-symbols-outlined achievementIcon">
                     add
                 </span>
-                <span class="summaryCardInfo">
+                <span class="achievementCardInfo">
                     <h2>Deck Creator</h2>
                     <p>Create your first deck</p>
                 </span>
@@ -165,7 +166,7 @@
                 <span class="material-symbols-outlined achievementIcon">
                     newsstand
                 </span>
-                <span class="summaryCardInfo">
+                <span class="achievementCardInfo">
                     <h2>Curator</h2>
                     <p>Create 5 decks</p>
                 </span>
@@ -177,7 +178,7 @@
                 <span class="material-symbols-outlined achievementIcon">
                     kid_star
                 </span>
-                <span class="summaryCardInfo">
+                <span class="achievementCardInfo">
                     <h2>Perfectionist</h2>
                     <p>Score perfect on a deck</p>
                 </span>
