--- a/public/Html/dashboard.html
+++ b/public/Html/dashboard.html
@@ -20,12 +20,13 @@
 
         document.adoptedStyleSheets.push(typescaleStyles.styleSheet);
     </script>
+    <link rel="stylesheet" href="../Styles/css/reset.css">
     <link rel="stylesheet" href="../Styles/css/styles.css">
     <link rel="stylesheet" href="../Styles/css/dashboard.css">
 </head>
 
 <body>
-    <nav>
+    <nav class="mainNav">
         <!-- Navigation content -->
         <p class="hero">FlashLearn</p>
         <ul class="navbar-list">
@@ -74,7 +75,7 @@
                             import_contacts
                         </span>
                     </span>
-                    <span class="dashboardCardValue">67</span>
+                    <span class="dashboardCardValue" id="dashboardTotalDecks">0</span>
                     <span class="additionalText">Click to view all</span>
                 </a>
             </div>
@@ -86,7 +87,7 @@
                             trending_up
                         </span>
                     </span>
-                    <span class="dashboardCardValue">1,245</span>
+                    <span class="dashboardCardValue" id="dashboardCardsStudied">0</span>
                     <span class="additionalText">Click to view stats</span>
                 </a>
             </div>
@@ -98,7 +99,7 @@
                             trophy
                         </span>
                     </span>
-                    <span class="dashboardCardValue">0 Days</span>
+                    <span class="dashboardCardValue" id="dashboardStudyStreak">0 Days</span>
                     <span class="additionalText">🔥 Keep it going!</span>
                 </a>
             </div>
@@ -110,7 +111,7 @@
                             trophy
                         </span>
                     </span>
-                    <span class="dashboardCardValue">0 Days</span>
+                    <span class="dashboardCardValue" id="dashboardAchievements">0</span>
                     <span class="additionalText">Click to view all</span>
                 </a>
             </div>
@@ -144,7 +145,7 @@
                 const res = await fetch('/logout', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    credentials: 'include'   // ✅ important!
+                    credentials: 'include'
                 });
 
 
@@ -156,6 +157,28 @@
             } catch (err) {
                 console.error(err);
                 alert("Something went wrong");
+            }
+        });
+        document.addEventListener('DOMContentLoaded', () => {
+            const dashboardTotalDecks = document.getElementById('dashboardTotalDecks');
+            const dashboardCardsStudied = document.getElementById('dashboardCardsStudied');
+            const dashboardStudyStreak = document.getElementById('dashboardStudyStreak');
+            const dashboardAchievements = document.getElementById('dashboardAchievements');
+            try {
+                fetch('/userdata', {
+                    credentials: 'include',
+                    headers: { 'Accept': 'application/json' },
+                    cache: 'no-store'
+                })
+                .then(response => response.json())
+                .then(data => {
+                    dashboardTotalDecks.textContent = data.totalDecks || 0;
+                    dashboardCardsStudied.textContent = data.flashcardsStudied || 0;
+                    dashboardStudyStreak.textContent = data.studyStreak || 0 + ' Days';
+                    dashboardAchievements.textContent = data.achievementsUnlocked || 0;
+                });
+            } catch (err) {
+                console.error('Error fetching dashboard data:', err);
             }
         });
     </script>
