--- a/public/Html/community.html
+++ b/public/Html/community.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community</title>
+    <link rel="stylesheet" href="../Styles/css/reset.css">
     <link rel="stylesheet" href="../Styles/css/styles.css">
     <link rel="stylesheet" href="../Styles/css/community.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -12,7 +13,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="mainNav">
         <!-- Navigation content -->
         <ul class="navbar-list">
             <li class="navbar-list-item">
