--- a/public/Html/index.html
+++ b/public/Html/index.html
@@ -6,24 +6,12 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <script type="importmap">
-        {
-        "imports": {
-            "@material/web/": "https://esm.run/@material/web/"
-        }
-        }
-    </script>
-    <script type="module">
-        import '@material/web/all.js';
-        import {styles as typescaleStyles} from '@material/web/typography/md-typescale-styles.js';
-
-        document.adoptedStyleSheets.push(typescaleStyles.styleSheet);
-  </script>
+  <link rel="stylesheet" href="../Styles/css/reset.css">
   <link rel="stylesheet" href="../Styles/css/styles.css">
   <link rel="stylesheet" href="../Styles/css/frontpage.css">
 </head>
 <body>
-    <nav>
+    <nav class="mainNav">
         <!-- Navigation content -->
         <p class="hero unselectable">FlashLearn</p>
         <ul class="navbar-list">
