--- a/public/Html/profile.html
+++ b/public/Html/profile.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="mainNav">
         <!-- Navigation content -->
         <ul class="navbar-list">
             <li class="navbar-list-item">
@@ -66,12 +66,11 @@
         document.addEventListener('DOMContentLoaded', async () => {
             console.log('Loading profile data...');
             try {
-                const res = await fetch('/profile', {
+                const res = await fetch('/userdata', {
                     credentials: 'include',
                     headers: { 'Accept': 'application/json' },
                     cache: 'no-store' // <--- ADD THIS LINE
                 });
-// ...
 
                 if (!res.ok) {
                     console.warn('Failed to load profile:', res.status);
